books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-deployment-books
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books-pod
  template:
    metadata:
      labels:
        app: books-pod
    spec:
      containers:
      - name: books
        image: orsanaw/library-app-authors:1.6
        ports:
        - containerPort: 80
