many-pods.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-deployment-1
  labels:
    app: library-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: library-app
  template:
    metadata:
      labels:
        app: library-app
    spec:
      containers:
      - name: library-app
        image: ovieux/library
        imagePullPolicy: Never
