authors-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service-authors
spec:
  type: ClusterIP
  selector:
    app: authors-pod
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
