books-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service-books
spec:
  type: ClusterIP
  selector:
    app: library-app-books
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
