ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clusterip-service-authors
            port:
              number: 8000
      - path: /authors/
        pathType: Prefix
        backend:
          service:
            name: clusterip-service-authors
            port:
              number: 8000
      - path: /books/
        pathType: Prefix
        backend:
          service:
            name: clusterip-service-books
            port:
              number: 8000
